--- a/index.html
+++ b/index.html
@@ -1,290 +1,205 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>ALNOOR GARDEN HOME EXPESE</title>
-
+<title>ALNOOR GARDEN HOME EXPENSE</title>
 <style>
-body{
-    margin:0;
-    font-family:'Segoe UI',sans-serif;
-    background:linear-gradient(135deg,#e3f2fd,#f9fbff);
-}
-
-.header{
-    background:linear-gradient(90deg,#1565c0,#42a5f5);
-    color:white;
-    padding:20px;
-    text-align:center;
-    font-size:26px;
-    font-weight:bold;
-    position:relative;
-}
-
-.clock{
-    position:absolute;
-    right:20px;
-    top:22px;
-    font-size:15px;
-}
-
-.container{
-    padding:25px;
-}
-
-.filters{
-    display:flex;
-    flex-wrap:wrap;
-    gap:15px;
-    background:white;
-    padding:20px;
-    border-radius:12px;
-    box-shadow:0 4px 12px rgba(0,0,0,0.08);
-    align-items:end;
-}
-
-.filters label{
-    font-size:13px;
-    font-weight:600;
-}
-
-.filters input,.filters select{
-    padding:8px;
-    border-radius:6px;
-    border:1px solid #ccc;
-    min-width:150px;
-}
-
-button{
-    background:#1565c0;
-    color:white;
-    border:none;
-    padding:10px 16px;
-    border-radius:6px;
-    cursor:pointer;
-    font-weight:600;
-}
-
-button:hover{
-    background:#0d47a1;
-}
-
-.kpi{
-    margin-top:25px;
-    background:white;
-    padding:20px;
-    border-radius:12px;
-    box-shadow:0 4px 12px rgba(0,0,0,0.08);
-    text-align:center;
-}
-
-.kpi h2{
-    margin:0;
-    font-size:18px;
-    color:#555;
-}
-
-.kpi .value{
-    font-size:30px;
-    font-weight:bold;
-    color:#1565c0;
-    margin-top:10px;
-}
-
-.table-container{
-    margin-top:25px;
-    background:white;
-    padding:20px;
-    border-radius:12px;
-    box-shadow:0 4px 12px rgba(0,0,0,0.08);
-}
-
-table{
-    width:100%;
-    border-collapse:collapse;
-}
-
-th,td{
-    padding:10px;
-    border-bottom:1px solid #eee;
-}
-
-th{
-    background:#f1f6ff;
-}
-
-.enter-btn{
-    margin-top:20px;
-    text-align:center;
-}
+    body {
+        margin: 0; font-family: Arial, sans-serif;
+        background: linear-gradient(135deg, #f7faff, #e4f0fe);
+        color: #333;
+    }
+    header {
+        padding: 15px 30px; background: #fff;
+        box-shadow: 0 1px 4px rgba(0,0,0,0.1);
+        position: relative;
+    }
+    h1 { margin: 0; font-size: 24px; font-weight: bold; color: #1a4d8f; }
+    #clock {
+        position: absolute; top: 15px; right: 30px;
+        font-size: 18px; font-weight: bold;
+        color: #1a4d8f;
+    }
+    .filters {
+        padding: 20px 30px;
+        display: grid; grid-template-columns: 1fr 1fr 1fr 1fr; gap: 15px;
+    }
+    label { font-size: 14px; font-weight: bold; }
+    input, select {
+        padding: 8px; border: 1px solid #888; border-radius: 5px;
+        font-size: 14px;
+    }
+    #kpi {
+        margin: 20px 30px; font-size: 20px; font-weight: bold; color: #065a9a;
+    }
+    table {
+        width: calc(100% - 60px);
+        margin: 0 30px 40px 30px; border-collapse: collapse;
+    }
+    th, td {
+        border: 1px solid #ccc; padding: 8px; font-size: 14px;
+    }
+    th {
+        background: #e4efff; color: #1a4d8f;
+    }
+    tfoot tr td {
+        font-weight: bold; background: #fafcff;
+    }
+    .buttons {
+        position: fixed; bottom: 20px; width: 100%;
+        display: flex; justify-content: space-between; padding: 0 30px;
+    }
+    .btn {
+        padding: 10px 18px; font-size: 15px;
+        border: none; border-radius: 5px; cursor: pointer;
+        background: #1a4d8f; color: #fff;
+        box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+    }
+    .btn:hover { background: #163f6d; }
 </style>
 </head>
-
 <body>
 
-<div class="header">
-    ALNOOR GARDEN HOME EXPESE
-    <div class="clock" id="clock"></div>
-</div>
-
-<div class="container">
+<header>
+    <h1>ALNOOR GARDEN HOME EXPENSE</h1>
+    <div id="clock"></div>
+</header>
 
 <div class="filters">
     <div>
         <label>From Date</label><br>
         <input type="date" id="fromDate">
     </div>
-
     <div>
         <label>To Date</label><br>
         <input type="date" id="toDate">
     </div>
-
     <div>
-        <label>Head</label><br>
+        <label>HEAD</label><br>
         <select id="headFilter">
             <option value="">All</option>
-            <option>ELECTRICITY BILL</option>
-            <option>SUI GAS BILL</option>
-            <option>WATER BILL</option>
-            <option>STORM FIBER</option>
-            <option>SECURITY BILL</option>
-            <option>GROCERY</option>
-            <option>PLUMBING</option>
-            <option>ELECTRIC WORK</option>
-            <option>CAR RELATED</option>
-            <option>MISC. HOUSEHOLD</option>
-            <option>MISC. EXPENSE</option>
+            <option> ELECTRICITY BILL</option>
+            <option> SUI GAS BILL</option>
+            <option> WATER BILL</option>
+            <option> STORM FIBER</option>
+            <option> SECURITY BILL</option>
+            <option> GROCERY</option>
+            <option> PLUMBING</option>
+            <option> ELECTRIC WORK</option>
+            <option> CAR RELATED</option>
+            <option> MISC. HOUSEHOLD</option>
+            <option> MISC. EXPENSE</option>
         </select>
     </div>
-
     <div>
-        <label>Mode</label><br>
+        <label>MODE</label><br>
         <select id="modeFilter">
             <option value="">All</option>
             <option>CASH</option>
             <option>ONLINE</option>
+            <option>DEBIT CARD</option>
         </select>
     </div>
-
-    <div>
-        <button onclick="refreshData()">Refresh Data</button>
-    </div>
 </div>
 
-<div class="kpi">
-    <h2>Total Expense</h2>
-    <div class="value" id="totalExpense">0</div>
-</div>
+<div id="kpi">Total Expense: 0</div>
 
-<div class="table-container">
-    <table>
-        <thead>
-            <tr>
-                <th>Head</th>
-                <th>Description</th>
-                <th>Amount</th>
-                <th>Mode</th>
-                <th>Date</th>
-            </tr>
-        </thead>
-        <tbody id="expenseTable"></tbody>
-    </table>
-</div>
+<table id="expenseTable">
+    <thead>
+        <tr>
+            <th>DATE</th><th>HEAD</th><th>DESCRIPTION</th><th>AMOUNT</th><th>MODE</th>
+        </tr>
+    </thead>
+    <tbody></tbody>
+</table>
 
-<div class="enter-btn">
-    <a href="https://forms.gle/RHvNmsEchqCM1QK48" target="_blank">
-        <button>Enter Expense Now</button>
-    </a>
-</div>
-
+<div class="buttons">
+    <button class="btn" onclick="window.open('https://forms.gle/RHvNmsEchqCM1QK48','_blank')">
+        Enter Expense Now
+    </button>
+    <button class="btn" onclick="fetchAndRender()">Refresh Data</button>
 </div>
 
 <script>
-const sheetURL="https://docs.google.com/spreadsheets/d/e/2PACX-1vQuAsH1_3C4iz6LZFf4rBcPqI19su_PdhQiyEYd7HlAtkLOAUEliHkrGdsGg6Mj0RewWsgHZ4knskaJ/pub?gid=1464536103&single=true&output=csv";
 
-let allData=[];
-
-function fetchData(){
-    fetch(sheetURL+"?t="+new Date().getTime()) // prevents caching
-    .then(res=>res.text())
-    .then(csv=>{
-        const rows=csv.split("\n").slice(1);
-        allData=rows.map(row=>{
-            const cols=row.split(",");
-            return{
-                head:(cols[1]||"").trim(),
-                description:(cols[2]||"").trim(),
-                amount:parseFloat(cols[3])||0,
-                mode:(cols[4]||"").trim(),
-                date:new Date(cols[5])
-            };
-        }).filter(item=>item.date!="Invalid Date");
-        applyFilters();
-    });
-}
-
-function applyFilters(){
-    const from=document.getElementById("fromDate").value;
-    const to=document.getElementById("toDate").value;
-    const head=document.getElementById("headFilter").value;
-    const mode=document.getElementById("modeFilter").value;
-
-    let filtered=allData.filter(item=>{
-        let valid=true;
-
-        if(from) valid=valid && item.date>=new Date(from);
-        if(to) valid=valid && item.date<=new Date(to+"T23:59:59");
-        if(head) valid=valid && item.head===head;
-        if(mode) valid=valid && item.mode===mode;
-
-        return valid;
-    });
-
-    updateTable(filtered);
-    updateKPI(filtered);
-}
-
-function updateTable(data){
-    const tbody=document.getElementById("expenseTable");
-    tbody.innerHTML="";
-    data.forEach(item=>{
-        tbody.innerHTML+=`
-        <tr>
-            <td>${item.head}</td>
-            <td>${item.description}</td>
-            <td>${item.amount.toLocaleString()}</td>
-            <td>${item.mode}</td>
-            <td>${item.date.toISOString().split('T')[0]}</td>
-        </tr>`;
-    });
-}
-
-function updateKPI(data){
-    const total=data.reduce((sum,item)=>sum+item.amount,0);
-    document.getElementById("totalExpense").innerText=total.toLocaleString();
-}
-
-function refreshData(){
-    fetchData();
-}
-
+// -------------- Real Time Clock ----------------
 function updateClock(){
-    const now=new Date();
-    document.getElementById("clock").innerText=
-        now.toLocaleDateString()+" "+now.toLocaleTimeString();
+    const now = new Date();
+    document.getElementById("clock").innerText =
+        now.toLocaleTimeString('en-US', { hour12: false });
+}
+setInterval(updateClock, 1000);
+
+// -------------- Data Fetch + Render ----------------
+const DATA_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vQuAsH1_3C4iz6LZFf4rBcPqI19su_PdhQiyEYd7HlAtkLOAUEliHkrGdsGg6Mj0RewWsgHZ4knskaJ/pub?gid=1464536103&single=true&output=csv";
+
+let expenseData = [];
+
+async function fetchAndRender(){
+    const res = await fetch(DATA_URL);
+    const csvText = await res.text();
+    parseCSV(csvText);
+    filterAndDisplay();
 }
 
-setInterval(updateClock,1000);
-updateClock();
+function parseCSV(csv){
+    const lines = csv.trim().split("\n");
+    const headers = lines[0].split(",");
+    expenseData = lines.slice(1).map(line => {
+        const cols = line.split(",");
+        return {
+            date: cols[5] ? new Date(cols[5]) : null,
+            head: cols[1].trim(),
+            desc: cols[2].trim(),
+            amount: parseFloat(cols[3]) || 0,
+            mode: cols[4].trim()
+        };
+    });
+}
 
-/* Auto apply filters when values change */
-document.getElementById("fromDate").addEventListener("change",applyFilters);
-document.getElementById("toDate").addEventListener("change",applyFilters);
-document.getElementById("headFilter").addEventListener("change",applyFilters);
-document.getElementById("modeFilter").addEventListener("change",applyFilters);
+function filterAndDisplay(){
+    const from = document.getElementById("fromDate").valueAsDate;
+    const to = document.getElementById("toDate").valueAsDate;
+    const head = document.getElementById("headFilter").value.trim();
+    const mode = document.getElementById("modeFilter").value.trim();
 
-fetchData();
+    let filtered = expenseData.filter(row => {
+        if(!row.date) return false;
+        if(from && row.date < from) return false;
+        if(to && row.date > to) return false;
+        if(head && row.head !== head) return false;
+        if(mode && row.mode !== mode) return false;
+        return true;
+    });
+
+    // KPI
+    const total = filtered.reduce((s, r) => s + r.amount, 0);
+    document.getElementById("kpi").innerText = "Total Expense: " + total.toFixed(2);
+
+    // Table
+    const tbody = document.querySelector("#expenseTable tbody");
+    tbody.innerHTML = "";
+    filtered.forEach(r => {
+        const tr = document.createElement("tr");
+        tr.innerHTML = `
+            <td>${r.date.toISOString().split("T")[0]}</td>
+            <td>${r.head}</td>
+            <td>${r.desc}</td>
+            <td>${r.amount.toFixed(2)}</td>
+            <td>${r.mode}</td>
+        `;
+        tbody.appendChild(tr);
+    });
+}
+
+// Auto-refresh on filter change
+["fromDate","toDate","headFilter","modeFilter"].forEach(id => {
+    document.getElementById(id).addEventListener("change", filterAndDisplay);
+});
+
+// Initial load
+fetchAndRender();
+
 </script>
 
 </body>
