--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>ALNOOR GARDEN HOME EXPENSE</title>
+<title>ALNOOR GARDEN HOME EXPESE</title>
 
 <style>
 body{
     margin:0;
-    font-family:Segoe UI, sans-serif;
+    font-family:'Segoe UI',sans-serif;
     background:linear-gradient(135deg,#0f2027,#203a43,#2c5364);
     color:white;
 }
@@ -20,10 +20,10 @@ body{
 
 header{
     text-align:center;
-    font-size:28px;
-    font-weight:bold;
+    font-size:30px;
+    font-weight:700;
     letter-spacing:2px;
-    margin-bottom:10px;
+    margin-top:10px;
 }
 
 #clock{
@@ -32,31 +32,35 @@ header{
     right:30px;
     text-align:right;
     font-size:14px;
+    font-weight:600;
 }
 
 .filters{
     display:flex;
     justify-content:center;
+    align-items:center;
     gap:15px;
     flex-wrap:wrap;
-    margin:20px 0;
+    margin:25px 0;
 }
 
-.filters input, .filters select{
+.filters input,.filters select{
     padding:8px 12px;
-    border-radius:6px;
+    border-radius:8px;
     border:none;
-    font-weight:bold;
+    font-weight:600;
 }
 
 .kpi{
     text-align:center;
     font-size:32px;
-    font-weight:bold;
-    margin:20px 0;
+    font-weight:700;
+    margin:20px auto;
     padding:15px;
-    border-radius:10px;
+    width:60%;
+    border-radius:12px;
     background:linear-gradient(90deg,#00c6ff,#0072ff);
+    box-shadow:0 4px 20px rgba(0,0,0,0.4);
 }
 
 table{
@@ -68,7 +72,7 @@ table{
     overflow:hidden;
 }
 
-th, td{
+th,td{
     padding:10px;
     text-align:left;
 }
@@ -84,18 +88,19 @@ tr:nth-child(even){
 
 .buttons{
     text-align:center;
-    margin:25px 0;
+    margin:30px 0;
 }
 
 button{
-    padding:10px 20px;
+    padding:10px 25px;
     margin:10px;
     border:none;
-    border-radius:6px;
-    font-weight:bold;
+    border-radius:8px;
+    font-weight:700;
     cursor:pointer;
     background:linear-gradient(90deg,#ff512f,#dd2476);
     color:white;
+    font-size:14px;
 }
 
 button:hover{
@@ -116,17 +121,19 @@ button:hover{
 #loginScreen input{
     padding:10px;
     margin:10px;
-    border-radius:6px;
+    border-radius:8px;
     border:none;
+    width:200px;
 }
+
 </style>
 </head>
 
 <body>
 
 <div id="loginScreen">
-    <h2>Enter Password</h2>
-    <input type="password" id="passwordInput">
+    <h2>ALNOOR GARDEN HOME EXPESE</h2>
+    <input type="password" id="passwordInput" placeholder="Enter Password">
     <button onclick="checkPassword()">Login</button>
 </div>
 
@@ -134,7 +141,7 @@ button:hover{
 
 <div id="clock"></div>
 
-<header>ALNOOR GARDEN HOME EXPENSE</header>
+<header>ALNOOR GARDEN HOME EXPESE</header>
 
 <div class="filters">
     <input type="date" id="fromDate">
@@ -185,63 +192,53 @@ button:hover{
         Enter Expense Now
     </button>
     <button onclick="fetchData()">Refresh Data</button>
-    <button onclick="changePassword()">Change Password</button>
 </div>
 
 </div>
 
 <script>
-const sheetURL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vQuAsH1_3C4iz6LZFf4rBcPqI19su_PdhQiyEYd7HlAtkLOAUEliHkrGdsGg6Mj0RewWsgHZ4knskaJ/pub?gid=1464536103&single=true&output=csv";
+const sheetURL="https://docs.google.com/spreadsheets/d/e/2PACX-1vQuAsH1_3C4iz6LZFf4rBcPqI19su_PdhQiyEYd7HlAtkLOAUEliHkrGdsGg6Mj0RewWsgHZ4knskaJ/pub?gid=1464536103&single=true&output=csv";
 
-let sheetData = [];
-let password = localStorage.getItem("dashboardPassword") || "1234";
+const defaultPassword="Alnoor1234";
+let sheetData=[];
 
 function checkPassword(){
-    const input = document.getElementById("passwordInput").value;
-    if(input === password){
+    const input=document.getElementById("passwordInput").value;
+    if(input===defaultPassword){
         document.getElementById("loginScreen").style.display="none";
         document.getElementById("dashboard").style.display="block";
         fetchData();
-    } else {
+    }else{
         alert("Incorrect Password");
     }
 }
 
-function changePassword(){
-    const newPass = prompt("Enter New Password:");
-    if(newPass){
-        password = newPass;
-        localStorage.setItem("dashboardPassword", newPass);
-        alert("Password Changed Successfully");
-    }
-}
-
 function fetchData(){
-    fetch(sheetURL)
-    .then(res=>res.text())
-    .then(csv=>{
-        const rows = csv.split("\n").slice(1);
-        sheetData = rows.map(r=>{
-            const cols = r.split(",");
-            return {
-                head: cols[1],
-                description: cols[2],
-                amount: parseFloat(cols[3]) || 0,
-                mode: cols[4],
-                date: cols[5]
-            }
-        });
-        applyFilters();
+fetch(sheetURL)
+.then(res=>res.text())
+.then(csv=>{
+    const rows=csv.trim().split("\n").slice(1);
+    sheetData=rows.map(r=>{
+        const cols=r.split(",");
+        return{
+            head:cols[1],
+            description:cols[2],
+            amount:parseFloat(cols[3])||0,
+            mode:cols[4],
+            date:cols[5]
+        }
     });
+    applyFilters();
+});
 }
 
 function applyFilters(){
-    const from = document.getElementById("fromDate").value;
-    const to = document.getElementById("toDate").value;
-    const head = document.getElementById("headFilter").value;
-    const mode = document.getElementById("modeFilter").value;
+    const from=document.getElementById("fromDate").value;
+    const to=document.getElementById("toDate").value;
+    const head=document.getElementById("headFilter").value;
+    const mode=document.getElementById("modeFilter").value;
 
-    let filtered = sheetData.filter(item=>{
+    let filtered=sheetData.filter(item=>{
         let valid=true;
         if(from && new Date(item.date)<new Date(from)) valid=false;
         if(to && new Date(item.date)>new Date(to)) valid=false;
@@ -250,7 +247,7 @@ function applyFilters(){
         return valid;
     });
 
-    let total = 0;
+    let total=0;
     const tbody=document.getElementById("tableBody");
     tbody.innerHTML="";
 
@@ -260,7 +257,7 @@ function applyFilters(){
         <tr>
             <td>${item.head}</td>
             <td>${item.description}</td>
-            <td>${item.amount}</td>
+            <td>${item.amount.toLocaleString()}</td>
             <td>${item.mode}</td>
             <td>${item.date}</td>
         </tr>`;
@@ -275,9 +272,10 @@ document.querySelectorAll("#fromDate,#toDate,#headFilter,#modeFilter")
 function updateClock(){
     const now=new Date();
     const days=["SUN","MON","TUE","WED","THU","FRI","SAT"];
+    const time=now.toLocaleTimeString("en-GB",{hour12:false});
+    const date=now.toLocaleDateString("en-GB");
     document.getElementById("clock").innerHTML=
-        now.toLocaleTimeString()+"<br>"+
-        now.toLocaleDateString("en-GB")+" "+days[now.getDay()];
+    time+"<br>"+date+" "+days[now.getDay()];
 }
 setInterval(updateClock,1000);
 updateClock();
