--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ text-align:center;
 
 <div id="dashboard" style="display:none;">
 <div class="container">
-<div class="header">ALNOOR GARDEN HOME EXPESE</div>
+<div class="header">ALNOOR GARDEN HOME EXPENSE DASHBOARD</div>
 <div class="clock" id="clock"></div>
 
 <div class="filters">
